--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="keywords" content="Guild Wars 2 raids, Guild Wars 2 raid guides, GW2 raids, GW2 raid guides"/>
   <title>GuildWars2 Raid Guides</title>
 </head>
 
